Beginnig to create HTML body.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 
 <head>
 
-<link href="resources/css/reset.css" type="text/css" rel="stylesheet">
-<link href="resources/css/style.css" type="text/css" rel="stylesheet">
-    <title>Secret Agent Supply Inc.</title>
-  </head>
-  <body>
-    <h1></h1>
-      <p>
-      </p>
-  </body>
+  <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+  <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+  <title>Secret Agent Supply Inc.</title>
+</head>
+
+<body>
+
+<!--  HEADER SECTION  -->
+
+<div class="agent">
+
+  <div class="container">
+
+    <img src="./resources/images/logo.png">
+    <span>SECRET AGENT SUPPLY INC</SPAN>
+
+  </div>
+</div>
+<!--  <ain Section / New Arrival Banner/Headline -->
+
+<div class="main section"
+<div class="New H-line"
+  <h3>NEW ARRIVAL</H3>
+  <h1>SPORT BIKES AND MOTORCYCLES</h1>
+</div>
+</div>  
+
+</body>
 </html>
