Add more html, nav and images.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,48 @@
 <!--  <ain Section / New Arrival Banner/Headline -->
 
 <div class="main section"
-<div class="New H-line"
+<div class="headline"
   <h3>NEW ARRIVAL</H3>
   <h1>SPORT BIKES AND MOTORCYCLES</h1>
 </div>
-</div>  
+</div>
+<!-- Nav Bar Section -->
+
+<nav>
+  <ul>
+    <li>Eyewear</li>
+    <li>Apparel</li>
+    <li>Gadgets</li>
+    <li>Vehicles</li>
+    <li>Classes</li>
+    <li>Contact</li>
+  </ul>
+
+</nav>
+
+<!--  Product Gallery -->
+
+<div class="products">
+  <div class="product-pen">
+    <div class="prod-image">
+      <img src="./resources/images/pen.png">
+    </div>
+  </div>
+
+  <div class="product-watch">
+    <div class="product-image">
+      <img src="./resources/images/watch.png">
+    </div>
+  </div>
+
+<div class="product-glasses">
+  <div class="product-image">
+    <img src="./resources/images/glasses.png">
+  </div>
+</div>
+
+
+
 
 </body>
 </html>
