Add rest of HTML. Ready for CSS.

--- a/index.html
+++ b/index.html
@@ -44,26 +44,54 @@
 </nav>
 
 <!--  Product Gallery -->
-
+<div class="container">
 <div class="products">
   <div class="product-pen">
     <div class="prod-image">
       <img src="./resources/images/pen.png">
+
     </div>
-  </div>
+
+    <span class="descript">Exploing Pen</span>
+    </div>
 
   <div class="product-watch">
     <div class="product-image">
       <img src="./resources/images/watch.png">
     </div>
+    <span class="descript">Cellular Watch</span>
   </div>
 
-<div class="product-glasses">
-  <div class="product-image">
-    <img src="./resources/images/glasses.png">
+  <div class="product-glasses">
+    <div class="product-image">
+      <img src="./resources/images/glasses.png">
+  </div>
+    <span class="descript">Thermal Glasses</span>
+    </div>
   </div>
 </div>
 
+<!-- Biz Info -->
+
+<div class="container">
+  <div class="biz info">
+    <div class="info">
+     <span class="loc-hrs">Location</span>
+     <span>-47.346436, 84.32354</span>
+    </div>
+
+  <div class="info">
+    <span class="loc-hrs">Hours</span>
+    <span>0800 - 1800</span>
+
+<!--FOOTER (Almost done.)  -->
+
+<footer>
+  <div class="container">
+    &copy Copyright Secret Agent Supply, Inc.
+  </div>
+</footer>
+    
 
 
 
