Continue adding chngs to html and css.

--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 <!--  HEADER SECTION  -->
 
 <div class="agent">
-
   <div class="container">
 
-    <img src="./resources/images/logo.png">
+    <img src="./resources/images/logo.png" style="height: 24px; padding-right: 1rem;">
     <span>SECRET AGENT SUPPLY INC</SPAN>
 
   </div>
 </div>
-<!--  <ain Section / New Arrival Banner/Headline -->
+<!--  <Main Section / New Arrival Banner/Headline -->
 
-<div class="main section"
-<div class="headline"
+<div class="main">
+<div class="container">
+<div class="headline">
   <h3>NEW ARRIVAL</H3>
   <h1>SPORT BIKES AND MOTORCYCLES</h1>
 </div>
 </div>
+</div>
+
 <!-- Nav Bar Section -->
 
 <nav>
-  <ul>
+  <ul class="container">
     <li>Eyewear</li>
     <li>Apparel</li>
     <li>Gadgets</li>
@@ -91,7 +93,7 @@
     &copy Copyright Secret Agent Supply, Inc.
   </div>
 </footer>
-    
+
 
 
 
