Test final html / css. Proof.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <!--  Product Gallery -->
 <div class="container">
 <div class="products">
-  <div class="product-pen">
-    <div class="prod-image">
+  <div class="product">
+    <div class="product-image">
       <img src="./resources/images/pen.png">
 
     </div>
@@ -76,7 +76,7 @@
 <!-- Biz Info -->
 
 <div class="container">
-  <div class="biz info">
+  <div class="biz-info">
     <div class="info">
      <span class="loc-hrs">Location</span>
      <span>-47.346436, 84.32354</span>
@@ -85,6 +85,9 @@
   <div class="info">
     <span class="loc-hrs">Hours</span>
     <span>0800 - 1800</span>
+   </div>
+ </div>
+</div> 
 
 <!--FOOTER (Almost done.)  -->
 
@@ -93,9 +96,6 @@
     &copy Copyright Secret Agent Supply, Inc.
   </div>
 </footer>
-
-
-
 
 </body>
 </html>
