Proof even more. Still some glitches.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <li>Contact</li>
   </ul>
 
+  <ul class="mobiletainer">
+     <li>Menu</li>
+  </ul>   
 </nav>
 
 <!--  Product Gallery -->
@@ -87,7 +90,7 @@
     <span>0800 - 1800</span>
    </div>
  </div>
-</div> 
+</div>
 
 <!--FOOTER (Almost done.)  -->
 
